【修改】配置调整

--- a/rocksdb-grpc-server/src/main/resources/application.properties
+++ b/rocksdb-grpc-server/src/main/resources/application.properties
@@ -7,3 +7,10 @@ rocksdb.bg.compact.thread.cnt=5
 rocksdb.bg.flush.thread.cnt=5
 rocksdb.open.file.cnt=100
 rocksdb.max.total.wal.size=1024
+rocksdb.db.buffer.size=1024
+
+spring.http.multipart.max-file-size=-1
+spring.http.multipart.max-request-size=-1
+server.tomcat.max-http-post-size=0
+
+server.max-http-header-size=10000000
